# openai-kokoro-tts

./: .env.example  .gitignore  Dockerfile  README.md  cli_local_inference.py  debug_inference.sh  docker-compose.override.yml.example  docker-compose.yml  onnx_tts_handler.py  pyproject.toml  setup_models.ps1  setup_models.sh  test_inference.sh
.github/workflows/: python-pytest.yml
openai_kokoro_tts/: convert_to_onnx.py  onnx_tts_handler.py  server.py  simple_audio_converter.py  transformers_tts_handler.py  tts_handler.py  utils.py
tests/: test_onnx_tts_handler.py  test_transformers_tts_handler.py  test_tts_handler.py
