[project]
name = "openai-kokoro-tts"
version = "0.1.0"
description = "Present Kokoro TTS as an OpenAI API compatible endpoint"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "munch>=4.0.0",
    "python-dotenv>=1.0.1",
    "onnxruntime>=1.15.0",
    "onnx>=1.13.0",
    "kokoro-onnx>=0.1.0"  # Replaces most of the custom ONNX functionality
]

[project.optional-dependencies]
gpu = ["torch==2.0.1", "torchvision>=0.20.1", "onnxruntime-gpu>=1.15.0"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-gpu", extra = "gpu" }
]
