[project]
name = "openai-kokoro-tts"
version = "0.1.0"
description = "Present Kokoro TTS as an OpenAI API compatible endpoint"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "flask>=3.1.0",
    "markupsafe>=3.0.2",
    "munch>=4.0.0",
    "phonemizer>=3.3.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "scipy>=1.15.0",
    "transformers>=4.48.0",
    "onnxruntime>=1.15.0",
    "onnx>=1.13.0",
    "kokoro-onnx>=0.2.6",
    "gevent>=24.11.1",
    "soundfile>=0.12.1",
    "librosa>=0.10.2",
    "numba>=0.58.1",
    "ffmpeg-python>=0.2.0"
]

[project.optional-dependencies]
cpu = [
    "torch>=2.2.0 ; platform_machine == 'aarch64'",
    "numba>=0.58.1"
]
test = [
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3"
]

[tool.uv.sources]
pytorch-cpu = { url = "https://download.pytorch.org/whl/cpu" }

[tool.pytest.ini_options]
pythonpath = [
    ".",          # Add project root
    "models/kokoro"          # Add kokoro root
]
